[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Шрифты/vcrosdmonorusbyd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://DialogSystem/DialogBox.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="DialogBox" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="DialogBox" type="Polygon2D" parent="."]
position = Vector2( -64, -40 )
color = Color( 0.247059, 0.164706, 0.219608, 1 )
offset = Vector2( 64, 104 )
polygon = PoolVector2Array( -144, 48, -144, 0, 0, 0, 144, 0, 144, 48 )

[node name="DialogBoxTEXT" type="RichTextLabel" parent="."]
margin_left = -128.0
margin_top = 72.0
margin_right = 128.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
